// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spec/Abs renders [EMPTY] 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align={null}
    border={null}
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify={null}
    margin={null}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding={null}
    shadow={null}
    shape={null}
    state={null}
    style={
      [
        {
          "bottom": undefined,
          "height": undefined,
          "left": undefined,
          "overflow": "hidden",
          "position": "absolute",
          "right": undefined,
          "top": undefined,
          "width": undefined,
        },
        null,
      ]
    }
    testId={null}
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 01f57e0434 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="none"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="space-evenly"
    margin="-1 -2 -3 -4"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding="-1 -2 -3 -4"
    shadow="sm"
    shape="sm.all"
    state={null}
    style={
      [
        {
          "bottom": undefined,
          "height": undefined,
          "left": undefined,
          "overflow": "hidden",
          "position": "absolute",
          "right": undefined,
          "top": undefined,
          "width": undefined,
        },
        null,
      ]
    }
    testId="button-name"
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 01fe4dc5d7 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="xlg.all"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="center"
    margin="5 15"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding="5 15"
    shadow="md"
    shape="rounded.all"
    state={null}
    style={
      [
        {
          "bottom": undefined,
          "height": undefined,
          "left": undefined,
          "overflow": "hidden",
          "position": "absolute",
          "right": undefined,
          "top": undefined,
          "width": undefined,
        },
        null,
      ]
    }
    testId="Label"
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 03a8e4d4e7 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="baseline"
    border="xlg.bottom"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="space-around"
    margin="1 2 3 4"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding="1 2 3 4"
    shadow={null}
    shape="rounded.bottom"
    state="hover"
    style={
      [
        {
          "bottom": 100,
          "height": 90,
          "left": 100,
          "overflow": "hidden",
          "position": "absolute",
          "right": 100,
          "top": 100,
          "width": 90,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId={null}
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 04a518e8b 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="stretch"
    border="lg.top"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="center"
    margin="5 15"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding="5 15"
    shadow={null}
    shape="xlg.top"
    state="active"
    style={
      [
        {
          "bottom": 50,
          "height": "45%",
          "left": 50,
          "overflow": "hidden",
          "position": "absolute",
          "right": 50,
          "top": 50,
          "width": "45%",
        },
        {
          "width": 100,
        },
      ]
    }
    testId={null}
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 05d1b35863 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="md.all"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="flex-start"
    margin={0}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding={0}
    shadow={null}
    shape="lg.all"
    state={null}
    style={
      [
        {
          "bottom": undefined,
          "height": undefined,
          "left": undefined,
          "overflow": "hidden",
          "position": "absolute",
          "right": undefined,
          "top": undefined,
          "width": undefined,
        },
        null,
      ]
    }
    testId={null}
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 028fda35d8 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align={null}
    border="xlg.left"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="space-evenly"
    margin="-1 -2 -3 -4"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding="-1 -2 -3 -4"
    shadow="none"
    shape="rounded.left"
    state={null}
    style={
      [
        {
          "bottom": undefined,
          "height": undefined,
          "left": undefined,
          "overflow": "hidden",
          "position": "absolute",
          "right": undefined,
          "top": undefined,
          "width": undefined,
        },
        null,
      ]
    }
    testId="test-id"
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 099b86083 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-end"
    border={null}
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="space-around"
    margin="1 2 3 4"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding="1 2 3 4"
    shadow="none"
    shape="sm"
    state="hover"
    style={
      [
        {
          "bottom": 100,
          "height": 90,
          "left": 100,
          "overflow": "hidden",
          "position": "absolute",
          "right": 100,
          "top": 100,
          "width": 90,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="test-id"
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 0105a9d6e6d 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="stretch"
    border="xlg.top"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="space-between"
    margin="5 15 3"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding="5 15 3"
    shadow="lg"
    shape="rounded.top"
    state="active"
    style={
      [
        {
          "bottom": 50,
          "height": "45%",
          "left": 50,
          "overflow": "hidden",
          "position": "absolute",
          "right": 50,
          "top": 50,
          "width": "45%",
        },
        {
          "width": 100,
        },
      ]
    }
    testId=""
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 0879dcdd3 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align={null}
    border="lg.left"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="space-around"
    margin="1 2 3 4"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding="1 2 3 4"
    shadow="sm"
    shape="xlg.left"
    state={null}
    style={
      [
        {
          "bottom": undefined,
          "height": undefined,
          "left": undefined,
          "overflow": "hidden",
          "position": "absolute",
          "right": undefined,
          "top": undefined,
          "width": undefined,
        },
        null,
      ]
    }
    testId="button-name"
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 01637c2428 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="md.right"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="space-around"
    margin="1 2 3 4"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding="1 2 3 4"
    shadow="lg"
    shape="lg.right"
    state="active"
    style={
      [
        {
          "bottom": 50,
          "height": "45%",
          "left": 50,
          "overflow": "hidden",
          "position": "absolute",
          "right": 50,
          "top": 50,
          "width": "45%",
        },
        {
          "width": 100,
        },
      ]
    }
    testId=""
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 04413baa8e 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-end"
    border="sm"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="space-evenly"
    margin="-1 -2 -3 -4"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding="-1 -2 -3 -4"
    shadow={null}
    shape="md"
    state="hover"
    style={
      [
        {
          "bottom": 100,
          "height": 90,
          "left": 100,
          "overflow": "hidden",
          "position": "absolute",
          "right": 100,
          "top": 100,
          "width": 90,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId={null}
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 016778a92 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="none"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="flex-start"
    margin={0}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding={0}
    shadow="none"
    shape="none"
    state="active"
    style={
      [
        {
          "bottom": 50,
          "height": "45%",
          "left": 50,
          "overflow": "hidden",
          "position": "absolute",
          "right": 50,
          "top": 50,
          "width": "45%",
        },
        {
          "width": 100,
        },
      ]
    }
    testId="test-id"
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 0181006f2e 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align={null}
    border="md.left"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="space-between"
    margin="5 15 3"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding="5 15 3"
    shadow="md"
    shape="lg.left"
    state={null}
    style={
      [
        {
          "bottom": undefined,
          "height": undefined,
          "left": undefined,
          "overflow": "hidden",
          "position": "absolute",
          "right": undefined,
          "top": undefined,
          "width": undefined,
        },
        null,
      ]
    }
    testId="Label"
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 0246168c1a 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align={null}
    border="sm.left"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="center"
    margin="5 15"
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding="5 15"
    shadow="lg"
    shape="md.left"
    state={null}
    style={
      [
        {
          "bottom": undefined,
          "height": undefined,
          "left": undefined,
          "overflow": "hidden",
          "position": "absolute",
          "right": undefined,
          "top": undefined,
          "width": undefined,
        },
        null,
      ]
    }
    testId=""
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 0ab0287ef1 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="lg.right"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="space-evenly"
    margin="-1 -2 -3 -4"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding="-1 -2 -3 -4"
    shadow="md"
    shape="xlg.right"
    state="active"
    style={
      [
        {
          "bottom": 50,
          "height": "45%",
          "left": 50,
          "overflow": "hidden",
          "position": "absolute",
          "right": 50,
          "top": 50,
          "width": "45%",
        },
        {
          "width": 100,
        },
      ]
    }
    testId="Label"
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 0c76afdf5f 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-end"
    border="xlg"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="flex-end"
    margin={10}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding={10}
    shadow="sm"
    shape="rounded"
    state="hover"
    style={
      [
        {
          "bottom": 100,
          "height": 90,
          "left": 100,
          "overflow": "hidden",
          "position": "absolute",
          "right": 100,
          "top": 100,
          "width": 90,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="button-name"
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 0c12031299 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="baseline"
    border="lg.bottom"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="space-between"
    margin="5 15 3"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding="5 15 3"
    shadow="none"
    shape="xlg.bottom"
    state="hover"
    style={
      [
        {
          "bottom": 100,
          "height": 90,
          "left": 100,
          "overflow": "hidden",
          "position": "absolute",
          "right": 100,
          "top": 100,
          "width": 90,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="test-id"
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 0e02de49d 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="stretch"
    border="sm.top"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="flex-start"
    margin={0}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding={0}
    shadow="sm"
    shape="md.top"
    state="active"
    style={
      [
        {
          "bottom": 50,
          "height": "45%",
          "left": 50,
          "overflow": "hidden",
          "position": "absolute",
          "right": 50,
          "top": 50,
          "width": "45%",
        },
        {
          "width": 100,
        },
      ]
    }
    testId="button-name"
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 1a698e7c 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="stretch"
    border="xlg"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href=""
    isDisabled={true}
    isHidden={true}
    justify={null}
    margin={null}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding={null}
    shadow="md"
    shape="sm.top"
    state="active"
    style={
      [
        {
          "bottom": 50,
          "height": "45%",
          "left": 50,
          "overflow": "hidden",
          "position": "absolute",
          "right": 50,
          "top": 50,
          "width": "45%",
        },
        {
          "width": 100,
        },
      ]
    }
    testId="Label"
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 1a5929014 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="baseline"
    border="md.bottom"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="center"
    margin="5 15"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding="5 15"
    shadow="sm"
    shape="lg.bottom"
    state="hover"
    style={
      [
        {
          "bottom": 100,
          "height": 90,
          "left": 100,
          "overflow": "hidden",
          "position": "absolute",
          "right": 100,
          "top": 100,
          "width": 90,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="button-name"
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 1c7c53747 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="xlg.right"
    colors="accenttext"
    direction="row-reverse"
    events="none"
    flex={0}
    href=""
    isDisabled={true}
    isHidden={true}
    justify={null}
    margin={null}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding={null}
    shadow="sm"
    shape="rounded.right"
    state="active"
    style={
      [
        {
          "bottom": 50,
          "height": "45%",
          "left": 50,
          "overflow": "hidden",
          "position": "absolute",
          "right": 50,
          "top": 50,
          "width": "45%",
        },
        {
          "width": 100,
        },
      ]
    }
    testId="button-name"
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 2d7294eec 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="stretch"
    border="md.top"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="flex-end"
    margin={10}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding={10}
    shadow="none"
    shape="lg.top"
    state="active"
    style={
      [
        {
          "bottom": 50,
          "height": "45%",
          "left": 50,
          "overflow": "hidden",
          "position": "absolute",
          "right": 50,
          "top": 50,
          "width": "45%",
        },
        {
          "width": 100,
        },
      ]
    }
    testId="test-id"
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 5fb02701f 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="baseline"
    border="sm.bottom"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="flex-end"
    margin={10}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding={10}
    shadow="md"
    shape="md.bottom"
    state="hover"
    style={
      [
        {
          "bottom": 100,
          "height": 90,
          "left": 100,
          "overflow": "hidden",
          "position": "absolute",
          "right": 100,
          "top": 100,
          "width": 90,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="Label"
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 88d88082e 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="sm.right"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="space-between"
    margin="5 15 3"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding="5 15 3"
    shadow={null}
    shape="md.right"
    state="active"
    style={
      [
        {
          "bottom": 50,
          "height": "45%",
          "left": 50,
          "overflow": "hidden",
          "position": "absolute",
          "right": 50,
          "top": 50,
          "width": "45%",
        },
        {
          "width": 100,
        },
      ]
    }
    testId={null}
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 967bd12b6 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="lg.all"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="flex-end"
    margin={10}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding={10}
    shadow="lg"
    shape="xlg.all"
    state={null}
    style={
      [
        {
          "bottom": undefined,
          "height": undefined,
          "left": undefined,
          "overflow": "hidden",
          "position": "absolute",
          "right": undefined,
          "top": undefined,
          "width": undefined,
        },
        null,
      ]
    }
    testId=""
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 1157ecf47 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="baseline"
    border="xlg.all"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="flex-start"
    margin={0}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding={0}
    shadow="lg"
    shape="sm.bottom"
    state="hover"
    style={
      [
        {
          "bottom": 100,
          "height": 90,
          "left": 100,
          "overflow": "hidden",
          "position": "absolute",
          "right": 100,
          "top": 100,
          "width": 90,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId=""
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 2223808be 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-end"
    border="lg"
    colors={
      {
        "bg": "bg.primaryalt",
        "bgActive": "bg.primaryaltminus",
        "bgHover": "bg.primaryaltplus",
        "border": "transparent",
        "borderActive": "transparent",
        "borderHover": "transparent",
        "text": "text.primary",
        "textActive": "text.primaryminus",
        "textHover": "text.primaryplus",
      }
    }
    direction="column"
    events="box-only"
    flex={1}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify="flex-start"
    margin={0}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={null}
    padding={0}
    shadow="md"
    shape="xlg"
    state="hover"
    style={
      [
        {
          "bottom": 100,
          "height": 90,
          "left": 100,
          "overflow": "hidden",
          "position": "absolute",
          "right": 100,
          "top": 100,
          "width": 90,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId="Label"
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders 61795036d 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-end"
    border="md"
    colors={
      {
        "bg": "transparent",
        "bgActive": "transparent",
        "bgHover": "transparent",
        "border": "bg.success",
        "borderActive": "bg.successminus",
        "borderHover": "bg.successplus",
        "text": "text.success",
        "textActive": "text.successminus",
        "textHover": "text.successplus",
      }
    }
    direction="column-reverse"
    events="auto"
    flex={2}
    href="https://google.com"
    isDisabled={false}
    isHidden={false}
    justify={null}
    margin={null}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding={null}
    shadow="lg"
    shape="lg"
    state="hover"
    style={
      [
        {
          "bottom": 100,
          "height": 90,
          "left": 100,
          "overflow": "hidden",
          "position": "absolute",
          "right": 100,
          "top": 100,
          "width": 90,
        },
        {
          "position": "absolute",
        },
      ]
    }
    testId=""
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders ca5fbf1aa 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="flex-start"
    border="xlg.bottom"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href=""
    isDisabled={true}
    isHidden={true}
    justify="center"
    margin="5 15"
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={1}
    padding="5 15"
    shadow="none"
    shape="sm.right"
    state="active"
    style={
      [
        {
          "bottom": 50,
          "height": "45%",
          "left": 50,
          "overflow": "hidden",
          "position": "absolute",
          "right": 50,
          "top": 50,
          "width": "45%",
        },
        {
          "width": 100,
        },
      ]
    }
    testId="test-id"
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders d23c925b 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align="center"
    border="sm.all"
    colors="secondary"
    direction="row"
    events="box-none"
    flex={-1}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify={null}
    margin={null}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    onState={[Function]}
    opacityDisabled={0}
    padding={null}
    shadow="none"
    shape="md.all"
    state={null}
    style={
      [
        {
          "bottom": undefined,
          "height": undefined,
          "left": undefined,
          "overflow": "hidden",
          "position": "absolute",
          "right": undefined,
          "top": undefined,
          "width": undefined,
        },
        null,
      ]
    }
    testId="test-id"
  >
    custom node
  </test-mock>
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;

exports[`spec/Abs renders f30eead6 1`] = `
<test-mock
  events="auto"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <test-mock
    align={null}
    border="xlg.top"
    colors={null}
    direction={null}
    events={null}
    flex={null}
    href={null}
    isDisabled={null}
    isHidden={null}
    justify="flex-end"
    margin={10}
    onPress={null}
    onPressIn={null}
    onPressOut={null}
    onState={null}
    opacityDisabled={0.5}
    padding={10}
    shadow={null}
    shape="sm.left"
    state={null}
    style={
      [
        {
          "bottom": undefined,
          "height": undefined,
          "left": undefined,
          "overflow": "hidden",
          "position": "absolute",
          "right": undefined,
          "top": undefined,
          "width": undefined,
        },
        null,
      ]
    }
    testId={null}
  />
  <test-mock
    style={
      [
        {
          "bottom": 0,
          "height": undefined,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": undefined,
        },
        {
          "pointerEvents": "none",
          "position": "fixed",
          "zIndex": 1000,
        },
      ]
    }
  >
    <test-mock
      align="flex-end"
      events="box-none"
      justify="flex-start"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "bottom": 100,
            "zIndex": 100,
          },
        ]
      }
    />
  </test-mock>
</test-mock>
`;
